tests/typescript/pos/misc/top-level.ts
var a:number = 1; 


/*@ foo :: () => { number | v > 0 } */
function foo():number {
  
  return a ;


}
